[package]
name = "webgame"
description = "Webgame"
version = "0.1.0"
authors = ["H3rmt <stemmer.enrico@gmail.com>"]
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [] }
ws_stream_wasm = "0.7.3"
wasm-bindgen-futures = "0.4.33"
js-sys = "0.3.60"

futures-util = "0.3.24"
futures = "0.3.24"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#wee_alloc = { version = "0.4.5", optional = true }

#[dev-dependencies]
#wasm-bindgen-test = "0.3.13"

[profile.dev]
opt-level = 0

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true